Add changed files job

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,54 +1,21 @@
 steps:
-  - label: ":test_tube: Encoder Tests"
+  - label: "Check Changed Files"
     plugins:
       - monorepo-diff#v1.4.0:
+          diff: "git diff --name-only $BUILDKITE_PULL_REQUEST_BASE_BRANCH"
           watch:
             - path: 
                 - "fastvideo/v1/models/encoders/**"
                 - "fastvideo/v1/models/loaders/**"
                 - "fastvideo/v1/tests/encoders/**"
               config:
-                command: ".buildkite/scripts/run_tests.sh encoder"
-    timeout_in_minutes: 30
-    retry:
-      automatic:
-        - exit_status: -1
-          limit: 2
-        - exit_status: 255
-          limit: 2
-    env:
-      BUILDKITE_CLEAN_CHECKOUT: "true"
-      TEST_TYPE: "encoder"
-    agents:
-      queue: "default"
-
-  - label: ":test_tube: VAE Tests"
-    plugins:
-      - monorepo-diff#v1.4.0:
-          watch:
+                trigger: "encoder-tests"
             - path:
                 - "fastvideo/v1/models/vaes/**"
                 - "fastvideo/v1/models/loaders/**"
                 - "fastvideo/v1/tests/vaes/**"
               config:
-                command: ".buildkite/scripts/run_tests.sh vae"
-    timeout_in_minutes: 30
-    retry:
-      automatic:
-        - exit_status: -1
-          limit: 2
-        - exit_status: 255
-          limit: 2
-    env:
-      BUILDKITE_CLEAN_CHECKOUT: "true"
-      TEST_TYPE: "vae"
-    agents:
-      queue: "default"
-
-  - label: ":test_tube: Transformer Tests"
-    plugins:
-      - monorepo-diff#v1.4.0:
-          watch:
+                trigger: "vae-tests"
             - path:
                 - "fastvideo/v1/models/dits/**"
                 - "fastvideo/v1/models/loaders/**"
@@ -56,29 +23,45 @@ steps:
                 - "fastvideo/v1/layers/**"
                 - "fastvideo/v1/attention/**"
               config:
-                command: ".buildkite/scripts/run_tests.sh transformer"
+                trigger: "transformer-tests"
+            - path: "fastvideo/v1/tests/ssim/**"
+              config:
+                trigger: "ssim-tests"
+
+  - label: "Encoder Tests"
+    key: "encoder-tests"
+    command: ".buildkite/scripts/run_tests.sh encoder"
     timeout_in_minutes: 30
-    retry:
-      automatic:
-        - exit_status: -1
-          limit: 2
-        - exit_status: 255
-          limit: 2
+    env:
+      BUILDKITE_CLEAN_CHECKOUT: "true"
+      TEST_TYPE: "encoder"
+    agents:
+      queue: "default"
+
+  - label: "VAE Tests"
+    key: "vae-tests"
+    command: ".buildkite/scripts/run_tests.sh vae"
+    timeout_in_minutes: 30
+    env:
+      BUILDKITE_CLEAN_CHECKOUT: "true"
+      TEST_TYPE: "vae"
+    agents:
+      queue: "default"
+
+  - label: "Transformer Tests"
+    key: "transformer-tests"
+    command: ".buildkite/scripts/run_tests.sh transformer"
+    timeout_in_minutes: 30
     env:
       BUILDKITE_CLEAN_CHECKOUT: "true"
       TEST_TYPE: "transformer"
     agents:
       queue: "default"
 
-  - label: ":test_tube: SSIM Tests"
+  - label: "SSIM Tests"
+    key: "ssim-tests"
     command: ".buildkite/scripts/run_tests.sh ssim"
     timeout_in_minutes: 60
-    retry:
-      automatic:
-        - exit_status: -1
-          limit: 2
-        - exit_status: 255
-          limit: 2
     env:
       BUILDKITE_CLEAN_CHECKOUT: "true"
       TEST_TYPE: "ssim"
