--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -11,8 +11,14 @@ steps:
               config:
                 command: |
                   echo "Current working directory: $(pwd)"
-                  echo "Changed files in encoder paths:"
-                  git diff --name-only $BUILDKITE_PULL_REQUEST_BASE_BRANCH | grep -E "fastvideo/v1/models/encoders/|fastvideo/v1/models/loaders/|fastvideo/v1/tests/encoders/"
+                  echo "Git remotes:"
+                  git remote -v
+                  echo "Current branch:"
+                  git branch --show-current
+                  echo "Git status:"
+                  git status
+                  echo "Full diff:"
+                  git diff --name-only $BUILDKITE_PULL_REQUEST_BASE_BRANCH
                   ls -la
                   chmod +x .buildkite/scripts/run_tests.sh
                   .buildkite/scripts/run_tests.sh encoder
@@ -30,8 +36,14 @@ steps:
               config:
                 command: |
                   echo "Current working directory: $(pwd)"
-                  echo "Changed files in VAE paths:"
-                  git diff --name-only $BUILDKITE_PULL_REQUEST_BASE_BRANCH | grep -E "fastvideo/v1/models/vaes/|fastvideo/v1/models/loaders/|fastvideo/v1/tests/vaes/"
+                  echo "Git remotes:"
+                  git remote -v
+                  echo "Current branch:"
+                  git branch --show-current
+                  echo "Git status:"
+                  git status
+                  echo "Full diff:"
+                  git diff --name-only $BUILDKITE_PULL_REQUEST_BASE_BRANCH
                   ls -la
                   chmod +x .buildkite/scripts/run_tests.sh
                   .buildkite/scripts/run_tests.sh vae
@@ -51,8 +63,14 @@ steps:
               config:
                 command: |
                   echo "Current working directory: $(pwd)"
-                  echo "Changed files in transformer paths:"
-                  git diff --name-only $BUILDKITE_PULL_REQUEST_BASE_BRANCH | grep -E "fastvideo/v1/models/dits/|fastvideo/v1/models/loaders/|fastvideo/v1/tests/transformers/|fastvideo/v1/layers/|fastvideo/v1/attention/"
+                  echo "Git remotes:"
+                  git remote -v
+                  echo "Current branch:"
+                  git branch --show-current
+                  echo "Git status:"
+                  git status
+                  echo "Full diff:"
+                  git diff --name-only $BUILDKITE_PULL_REQUEST_BASE_BRANCH
                   ls -la
                   chmod +x .buildkite/scripts/run_tests.sh
                   .buildkite/scripts/run_tests.sh transformer
@@ -67,8 +85,14 @@ steps:
               config:
                 command: |
                   echo "Current working directory: $(pwd)"
-                  echo "Changed files in SSIM paths:"
-                  git diff --name-only $BUILDKITE_PULL_REQUEST_BASE_BRANCH | grep -E "fastvideo/v1/tests/ssim/"
+                  echo "Git remotes:"
+                  git remote -v
+                  echo "Current branch:"
+                  git branch --show-current
+                  echo "Git status:"
+                  git status
+                  echo "Full diff:"
+                  git diff --name-only $BUILDKITE_PULL_REQUEST_BASE_BRANCH
                   ls -la
                   chmod +x .buildkite/scripts/run_tests.sh
                   .buildkite/scripts/run_tests.sh ssim
