--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,29 +1,22 @@
 steps:
   - label: "Trigger Tests"
+    command: |
+      echo "Current working directory: $(pwd)"
+      echo "Current branch:"
+      git branch --show-current
+      echo "Full diff:"
+      git diff --name-only $BUILDKITE_PULL_REQUEST_BASE_BRANCH...HEAD
     plugins:
       - monorepo-diff#v1.4.0:
-          diff: "git diff --name-only $BUILDKITE_PULL_REQUEST_BASE_BRANCH"
+          diff: "git diff --name-only $BUILDKITE_PULL_REQUEST_BASE_BRANCH...HEAD"
           watch:
             - path: 
                 - "fastvideo/v1/models/encoders/**"
                 - "fastvideo/v1/models/loaders/**"
                 - "fastvideo/v1/tests/encoders/**"
               config:
-                command: |
-                  echo "Current working directory: $(pwd)"
-                  echo "Git remotes:"
-                  git remote -v
-                  echo "Current branch:"
-                  git branch --show-current
-                  echo "Git status:"
-                  git status
-                  echo "Full diff:"
-                  git diff --name-only $BUILDKITE_PULL_REQUEST_BASE_BRANCH
-                  ls -la
-                  chmod +x .buildkite/scripts/run_tests.sh
-                  .buildkite/scripts/run_tests.sh encoder
+                command: "timeout 30m .buildkite/scripts/run_tests.sh encoder"
                 label: "Encoder Tests"
-                timeout_in_minutes: 30
                 env:
                   - BUILDKITE_CLEAN_CHECKOUT=true
                   - TEST_TYPE=encoder
@@ -34,21 +27,8 @@ steps:
                 - "fastvideo/v1/models/loaders/**"
                 - "fastvideo/v1/tests/vaes/**"
               config:
-                command: |
-                  echo "Current working directory: $(pwd)"
-                  echo "Git remotes:"
-                  git remote -v
-                  echo "Current branch:"
-                  git branch --show-current
-                  echo "Git status:"
-                  git status
-                  echo "Full diff:"
-                  git diff --name-only $BUILDKITE_PULL_REQUEST_BASE_BRANCH
-                  ls -la
-                  chmod +x .buildkite/scripts/run_tests.sh
-                  .buildkite/scripts/run_tests.sh vae
+                command: "timeout 30m .buildkite/scripts/run_tests.sh vae"
                 label: "VAE Tests"
-                timeout_in_minutes: 30
                 env:
                   - BUILDKITE_CLEAN_CHECKOUT=true
                   - TEST_TYPE=vae
@@ -61,85 +41,19 @@ steps:
                 - "fastvideo/v1/layers/**"
                 - "fastvideo/v1/attention/**"
               config:
-                command: |
-                  echo "Current working directory: $(pwd)"
-                  echo "Git remotes:"
-                  git remote -v
-                  echo "Current branch:"
-                  git branch --show-current
-                  echo "Git status:"
-                  git status
-                  echo "Full diff:"
-                  git diff --name-only $BUILDKITE_PULL_REQUEST_BASE_BRANCH
-                  ls -la
-                  chmod +x .buildkite/scripts/run_tests.sh
-                  .buildkite/scripts/run_tests.sh transformer
+                command: "timeout 30m .buildkite/scripts/run_tests.sh transformer"
                 label: "Transformer Tests"
-                timeout_in_minutes: 30
                 env:
                   - BUILDKITE_CLEAN_CHECKOUT=true
                   - TEST_TYPE=transformer
                 agents:
                   queue: "default"
-            - path: "fastvideo/v1/tests/ssim/**"
+            - path: "fastvideo/v1/**/*.py"
               config:
-                command: |
-                  echo "Current working directory: $(pwd)"
-                  echo "Git remotes:"
-                  git remote -v
-                  echo "Current branch:"
-                  git branch --show-current
-                  echo "Git status:"
-                  git status
-                  echo "Full diff:"
-                  git diff --name-only $BUILDKITE_PULL_REQUEST_BASE_BRANCH
-                  ls -la
-                  chmod +x .buildkite/scripts/run_tests.sh
-                  .buildkite/scripts/run_tests.sh ssim
+                command: "timeout 60m .buildkite/scripts/run_tests.sh ssim"
                 label: "SSIM Tests"
-                timeout_in_minutes: 60
                 env:
                   - BUILDKITE_CLEAN_CHECKOUT=true
                   - TEST_TYPE=ssim
                 agents:
                   queue: "default"
-
-  # - label: "Encoder Tests"
-  #   key: "encoder-tests"
-  #   command: ".buildkite/scripts/run_tests.sh encoder"
-  #   timeout_in_minutes: 30
-  #   env:
-  #     BUILDKITE_CLEAN_CHECKOUT: "true"
-  #     TEST_TYPE: "encoder"
-  #   agents:
-  #     queue: "default"
-
-  # - label: "VAE Tests"
-  #   key: "vae-tests"
-  #   command: ".buildkite/scripts/run_tests.sh vae"
-  #   timeout_in_minutes: 30
-  #   env:
-  #     BUILDKITE_CLEAN_CHECKOUT: "true"
-  #     TEST_TYPE: "vae"
-  #   agents:
-  #     queue: "default"
-
-  # - label: "Transformer Tests"
-  #   key: "transformer-tests"
-  #   command: ".buildkite/scripts/run_tests.sh transformer"
-  #   timeout_in_minutes: 30
-  #   env:
-  #     BUILDKITE_CLEAN_CHECKOUT: "true"
-  #     TEST_TYPE: "transformer"
-  #   agents:
-  #     queue: "default"
-
-  # - label: "SSIM Tests"
-  #   key: "ssim-tests"
-  #   command: ".buildkite/scripts/run_tests.sh ssim"
-  #   timeout_in_minutes: 60
-  #   env:
-  #     BUILDKITE_CLEAN_CHECKOUT: "true"
-  #     TEST_TYPE: "ssim"
-  #   agents:
-  #     queue: "default"
