--- a/docker/Dockerfile.python3.12
+++ b/docker/Dockerfile.python3.12
@@ -2,6 +2,8 @@ FROM nvidia/cuda:12.8.0-cudnn-devel-ubuntu22.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 
+SHELL ["/bin/bash", "-c"]
+
 WORKDIR /FastVideo
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -11,6 +13,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     openssh-server \
     zsh \
     vim \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Install uv and source its environment
