--- a/docker/Dockerfile.python3.12
+++ b/docker/Dockerfile.python3.12
@@ -28,10 +28,8 @@ RUN echo "# Placeholder" > README.md
 
 # Create and activate virtual environment with specific Python version and seed
 RUN source $HOME/.local/bin/env && \
-    uv venv --python 3.12 --seed /opt/venv
-
-# Install packages in the virtual environment
-RUN source /opt/venv/bin/activate && \
+    uv venv --python 3.12 --seed /opt/venv && \
+    source /opt/venv/bin/activate && \
     uv pip install --no-cache-dir --upgrade pip && \
     uv pip install --no-cache-dir .[dev] && \
     uv pip install --no-cache-dir flash-attn==2.7.4.post1 --no-build-isolation
@@ -39,7 +37,8 @@ RUN source /opt/venv/bin/activate && \
 COPY . .
 
 # Install dependencies using uv and set up shell configuration
-RUN source /opt/venv/bin/activate && \
+RUN source $HOME/.local/bin/env && \
+    source /opt/venv/bin/activate && \
     uv pip install --no-cache-dir -e .[dev] && \
     git config --unset-all http.https://github.com/.extraheader || true && \
     echo 'source /opt/venv/bin/activate' >> /root/.bashrc && \
