--- a/docker/Dockerfile.python3.12
+++ b/docker/Dockerfile.python3.12
@@ -32,7 +32,8 @@ RUN source $HOME/.local/bin/env && \
     source /opt/venv/bin/activate && \
     uv pip install --no-cache-dir --upgrade pip && \
     uv pip install --no-cache-dir .[dev] && \
-    uv pip install --no-cache-dir flash-attn==2.7.4.post1 --no-build-isolation
+    uv pip install --no-cache-dir ninja && \
+    MAX_JOBS=4 uv pip install --no-cache-dir flash-attn==2.7.4.post1 --no-build-isolation
 
 COPY . .
 
